// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/Settings.tsx General should render itself & its children 1`] = `
<div
  class="flex flex-1 flex-col h-screen dark:bg-gray-dark dark:text-white"
  data-testid="settings"
>
  <div
    class="flex justify-between items-center mt-2 py-2 mx-8"
  >
    <button
      class="focus:outline-none"
      title="Go Back"
      type="button"
    >
      <svg
        aria-label="Go Back"
        class="hover:text-gray-400"
        fill="currentColor"
        focusable="false"
        height="20"
        role="img"
        style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M7.78 12.53a.75.75 0 0 1-1.06 0L2.47 8.28a.75.75 0 0 1 0-1.06l4.25-4.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042L4.81 7h7.44a.75.75 0 0 1 0 1.5H4.81l2.97 2.97a.75.75 0 0 1 0 1.06Z"
        />
      </svg>
    </button>
    <h3
      class="text-lg font-semibold"
    >
      Settings
    </h3>
  </div>
  <div
    class="flex-grow overflow-x-auto px-8"
  >
    <fieldset
      class="mb-3"
    >
      <legend
        class="font-semibold mt-2 mb-1"
        id="appearance"
      >
        Appearance
      </legend>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="mr-3 py-1"
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200 "
              for="theme"
            >
              Theme:
            </label>
          </div>
          <div
            aria-labelledby="theme"
            class="flex items-center space-x-4"
            role="group"
          >
            <div
              class="flex mt-1"
            >
              <input
                checked=""
                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300"
                id="theme_system"
                name="theme"
                type="radio"
                value="SYSTEM"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_system"
              >
                System
              </label>
            </div>
            <div
              class="flex mt-1"
            >
              <input
                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300"
                id="theme_light"
                name="theme"
                type="radio"
                value="LIGHT"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_light"
              >
                Light
              </label>
            </div>
            <div
              class="flex mt-1"
            >
              <input
                class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300"
                id="theme_dark"
                name="theme"
                type="radio"
                value="DARK"
              />
              <label
                class="ml-3 block text-sm font-medium text-gray-700 dark:text-white"
                for="theme_dark"
              >
                Dark
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              checked=""
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="detailedNotifications"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="detailedNotifications"
            >
              Detailed notifications
              <span
                aria-label="tooltip-detailedNotifications"
                class="relative"
                id="tooltip-detailedNotifications"
              >
                <svg
                  aria-hidden="true"
                  class="text-blue-500 ml-1"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="showAccountHostname"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showAccountHostname"
            >
              Show account hostname
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="mb-3"
    >
      <legend
        class="font-semibold mt-2 mb-1"
        id="notifications"
      >
        Notifications
      </legend>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="showOnlyParticipating"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showOnlyParticipating"
            >
              Show only participating
              <span
                aria-label="tooltip-showOnlyParticipating"
                class="relative"
                id="tooltip-showOnlyParticipating"
              >
                <svg
                  aria-hidden="true"
                  class="text-blue-500 ml-1"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              checked=""
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="showBots"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showBots"
            >
              Show notifications from Bot accounts
              <span
                aria-label="tooltip-showBots"
                class="relative"
                id="tooltip-showBots"
              >
                <svg
                  aria-hidden="true"
                  class="text-blue-500 ml-1"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="markAsDoneOnOpen"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="markAsDoneOnOpen"
            >
              Mark as done on open
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="delayNotificationState"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="delayNotificationState"
            >
              Delay notification state
              <span
                aria-label="tooltip-delayNotificationState"
                class="relative"
                id="tooltip-delayNotificationState"
              >
                <svg
                  aria-hidden="true"
                  class="text-blue-500 ml-1"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="mb-3"
    >
      <legend
        class="font-semibold mt-2 mb-1"
        id="system"
      >
        System
      </legend>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="showNotificationsCountInTray"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showNotificationsCountInTray"
            >
              Show notifications count in tray
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              checked=""
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="showNotifications"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="showNotifications"
            >
              Show system notifications
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              checked=""
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="playSound"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="playSound"
            >
              Play sound
            </label>
          </div>
        </div>
      </div>
      <div
        class="mt-1 mb-3 text-sm"
      >
        <div
          class="flex items-start"
        >
          <div
            class="flex items-center h-5"
          >
            <input
              class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
              id="openAtStartUp"
              type="checkbox"
            />
          </div>
          <div
            class="ml-3 "
          >
            <label
              class="font-medium text-gray-700 dark:text-gray-200"
              for="openAtStartUp"
            >
              Open at startup
            </label>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
  <div
    class="flex justify-between items-center bg-gray-200 dark:bg-gray-darker py-1 px-8 text-sm"
  >
    <button
      class="font-semibold cursor-pointer"
      title="View release notes"
      type="button"
    >
      Gitify v
      0.0.1
    </button>
    <div>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none"
        hidden=""
        title="Login with Personal Access Token"
        type="button"
      >
        <svg
          aria-label="Login with Personal Access Token"
          class="octicon octicon-key"
          fill="currentColor"
          focusable="false"
          height="18"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M10.5 0a5.499 5.499 0 1 1-1.288 10.848l-.932.932a.749.749 0 0 1-.53.22H7v.75a.749.749 0 0 1-.22.53l-.5.5a.749.749 0 0 1-.53.22H5v.75a.749.749 0 0 1-.22.53l-.5.5a.749.749 0 0 1-.53.22h-2A1.75 1.75 0 0 1 0 14.25v-2c0-.199.079-.389.22-.53l4.932-4.932A5.5 5.5 0 0 1 10.5 0Zm-4 5.5c-.001.431.069.86.205 1.269a.75.75 0 0 1-.181.768L1.5 12.56v1.69c0 .138.112.25.25.25h1.69l.06-.06v-1.19a.75.75 0 0 1 .75-.75h1.19l.06-.06v-1.19a.75.75 0 0 1 .75-.75h1.19l1.023-1.025a.75.75 0 0 1 .768-.18A4 4 0 1 0 6.5 5.5ZM11 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="ml-1 mb-2"
          fill="currentColor"
          focusable="false"
          height="10"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
          />
        </svg>
      </button>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none"
        hidden=""
        title="Login with OAuth App"
        type="button"
      >
        <svg
          aria-label="Login with OAuth App"
          class="octicon octicon-person"
          fill="currentColor"
          focusable="false"
          height="20"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="20"
        >
          <path
            d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="mb-2"
          fill="currentColor"
          focusable="false"
          height="10"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="10"
        >
          <path
            d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z"
          />
        </svg>
      </button>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none"
        role="button"
        title="Logout"
        type="button"
      >
        <svg
          aria-label="Logout"
          class="octicon octicon-sign-out"
          fill="currentColor"
          focusable="false"
          height="18"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M2 2.75C2 1.784 2.784 1 3.75 1h2.5a.75.75 0 0 1 0 1.5h-2.5a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h2.5a.75.75 0 0 1 0 1.5h-2.5A1.75 1.75 0 0 1 2 13.25Zm10.44 4.5-1.97-1.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734l1.97-1.97H6.75a.75.75 0 0 1 0-1.5Z"
          />
        </svg>
      </button>
      <button
        class="hover:text-gray-500 py-1 px-2 my-1 mx-2 focus:outline-none mr-0"
        title="Quit Gitify"
        type="button"
      >
        <svg
          aria-label="Quit Gitify"
          class="octicon octicon-x-circle"
          fill="currentColor"
          focusable="false"
          height="18"
          role="img"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="18"
        >
          <path
            d="M2.344 2.343h-.001a8 8 0 0 1 11.314 11.314A8.002 8.002 0 0 1 .234 10.089a8 8 0 0 1 2.11-7.746Zm1.06 10.253a6.5 6.5 0 1 0 9.108-9.275 6.5 6.5 0 0 0-9.108 9.275ZM6.03 4.97 8 6.94l1.97-1.97a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l1.97 1.97a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-1.97 1.97a.749.749 0 0 1-1.275-.326.749.749 0 0 1 .215-.734L6.94 8 4.97 6.03a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018Z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`routes/Settings.tsx Notifications section should be able to toggle the showBots checkbox when detailedNotifications is enabled 1`] = `
<div
  class="flex items-start"
>
  <div
    class="flex items-center h-5"
  >
    <input
      checked=""
      class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
      id="showBots"
      type="checkbox"
    />
  </div>
  <div
    class="ml-3 "
  >
    <label
      class="font-medium text-gray-700 dark:text-gray-200"
      for="showBots"
    >
      Show notifications from Bot accounts
      <span
        aria-label="tooltip-showBots"
        class="relative"
        id="tooltip-showBots"
      >
        <svg
          aria-hidden="true"
          class="text-blue-500 ml-1"
          fill="currentColor"
          focusable="false"
          height="16"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;

exports[`routes/Settings.tsx Notifications section should not be able to toggle the showBots checkbox when detailedNotifications is disabled 1`] = `
<div
  class="flex items-start"
>
  <div
    class="flex items-center h-5"
  >
    <input
      checked=""
      class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
      disabled=""
      id="showBots"
      type="checkbox"
    />
  </div>
  <div
    class="ml-3 "
  >
    <label
      class="font-medium text-gray-700 dark:text-gray-200"
      for="showBots"
      style="text-decoration: line-through;"
    >
      Show notifications from Bot accounts
      <span
        aria-label="tooltip-showBots"
        class="relative"
        id="tooltip-showBots"
      >
        <svg
          aria-hidden="true"
          class="text-blue-500 ml-1"
          fill="currentColor"
          focusable="false"
          height="16"
          style="display: inline-block; user-select: none; vertical-align: text-bottom; overflow: visible;"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
          />
        </svg>
      </span>
    </label>
  </div>
</div>
`;
